--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           git config --global user.email ci-bot@argocd.com && git config --global user.name ci-bot
           echo "cloning config repo $CONFIG_REPO_NAME"
           git clone https://oauth2:${{ secrets.GH_PAT }}@github.com/${{ github.repository_owner }}/argocd-course-webapp.git
-          cd $CONFIG_REPO_NAME
+          cd argocd-course-webapp
           echo "checkout main branch"
           git checkout main
           echo "updating image tag in values file"
